--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,48 +11,56 @@
         android:id="@+id/sunImage"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/sun" />
 
     <ImageView
         android:id="@+id/moonImage"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/moon" />
 
     <ImageView
         android:id="@+id/mass1"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/m1" />
 
     <ImageView
         android:id="@+id/mass2"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/m2" />
 
     <ImageView
         android:id="@+id/mass3"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/m1" />
 
     <ImageView
         android:id="@+id/mass4"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/m2" />
 
     <ImageView
         android:id="@+id/mass5"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/m1" />
 
     <ImageView
         android:id="@+id/mass6"
         android:layout_width="36sp"
         android:layout_height="36sp"
+        android:alpha="0.01"
         android:src="@drawable/m2" />
 
 </FrameLayout>
