--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,28 @@
             android:fontFamily="monospace"
             android:onClick="setLockMass"
             android:text="test setLockMass to Sun" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnZoomIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:onClick="onZoomIn"
+                android:text="Zoom In" />
+
+            <Button
+                android:id="@+id/btnZoomOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:onClick="onZoomOut"
+                android:text="Zoom Out" />
+        </LinearLayout>
     </LinearLayout>
 
 
