--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,75 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".OpenGLES20Activity">
 
-    <com.daftar.taqwimplanetarium.LabelsView
-        android:id="@+id/labelsView"
+    <com.daftar.taqwimplanetarium.views.TaqwimPlanetariumView
+        android:id="@+id/taqwimPlanetariumView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@+id/infoPanel"
-        android:layout_margin="16sp"
-        android:background="@color/cardview_dark_background"
-        android:textColor="@color/white"
-        android:layout_gravity="center|top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/sunImage"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/sun" />
-
-    <ImageView
-        android:id="@+id/moonImage"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/moon" />
-
-    <ImageView
-        android:id="@+id/mass1"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/m1" />
-
-    <ImageView
-        android:id="@+id/mass2"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/m2" />
-
-    <ImageView
-        android:id="@+id/mass3"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/m1" />
-
-    <ImageView
-        android:id="@+id/mass4"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/m2" />
-
-    <ImageView
-        android:id="@+id/mass5"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/m1" />
-
-    <ImageView
-        android:id="@+id/mass6"
-        android:layout_width="36sp"
-        android:layout_height="36sp"
-        android:alpha="0.01"
-        android:src="@drawable/m2" />
 
     <LinearLayout
         android:layout_width="wrap_content"
